--- a/todo/src/styles.css
+++ b/todo/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.cdnfonts.com/css/wix-madefor-display');
+
+html,body{
+  height: 100%;
+}
+
+* {
+  font-family: 'Wix Madefor Display', sans-serif;
+  font-weight: 400;
+  color: black;
+}
