--- a/todo/src/app/app.html
+++ b/todo/src/app/app.html
@@ -1,3 +1,4 @@
 <div class="container-fluid mt-1 mt-md-3">
   <h1>{{ title() }} <span class="fa-solid fa-check"></span></h1>
+  <app-todos></app-todos>
 </div>
