feat: Nuova interfaccia Todo e implementazione in todos.html

--- a/todo/src/app/todos/todos.html
+++ b/todo/src/app/todos/todos.html
@@ -1,1 +1,12 @@
-<p>todos works!</p>
+<ul>
+  @for (todo of todos; track $index) {
+    <li>
+      #{{todo.id}} - {{todo.title}}
+      @if (todo.completed) {
+        <span class="fa-solid fa-check"></span>
+      }@else {
+        <span class="fa-solid fa-xmark"></span>
+      }
+    </li>
+  }
+</ul>
